# rules_haskell

./: .bazelignore  .bazeliskrc  .bazelrc  .bazelrc.bzlmod  .bazelrc.common  .bazelrc.local.old  .ghcide  .gitattributes  .gitignore  .hie-bios  .hie-bios-new  .mergify.yml  .readthedocs.yaml  BUILD  BUILD.bazel  BUILD.ghc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  Dockerfile.web  MAINTAINERS.md  MODULE.bazel  README.md  ROADMAP.md  Stackage.hs  WORKSPACE  all_tests.sh  azure-pipelines.yml  bazel_versions.bzl  cc_configure_custom.bzl  checksums.bzl  compiler.nix  constants.bzl  darwinfix.nix  debug.bzl  err.txt  fhs.nix  foo.cc  (+55 more)
buildifier/: BUILD.bazel  buildifier_test-workspace.patch
cross-sandbox/bazel-project/: .bazelrc  BUILD.bazel  Example.hs  WORKSPACE  bazel.nix  zlib.BUILD.bazel
docs/: BUILD  BUILD.bazel  conf.py  haskell-use-cases.rst  haskell.rst  index.rst  prebuild.sh  serve.py  why-bazel.rst
docs/pandoc/: BUILD.bazel  pandoc.bzl
docs/templates/: index.html  main.html  nav.html
examples/: .bazelrc.auth  .bazelrc.bzlmod  .bazelrc.local  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  nixpkgs  nixpkgs.nix  non_module_deps.bzl  shell.nix  split.patch
examples/arm/: .bazelrc  .bazelrc.bzlmod  .bazelrc.common  BUILD.bazel  BUILD.zlib.bazel  Dockerfile  Example2.hs  LibExample.hs  README.md  WORKSPACE  arm-cross.nix  nixpkgs  qemu-shell.nix  rules_sh-aarch64.patch  stack  zlib.BUILD.bazel
examples/asterius/: BUILD.bazel  README.md  WORKSPACE
examples/basic_modules/: BUILD.bazel  README.md
examples/cat_hs/: BUILD  BUILD.bazel  README.md  WORKSPACE
examples/hello-lib/: BUILD  Lib.hs  MsgType.hs  Unused.hs
examples/hello-sublib/: BUILD  MessageSuffix.hs
examples/hello-subsublib/: BUILD  MessageEnd.hs
examples/hello-world/: BUILD  Main.hs
examples/library_with_nix_dependencies/: BUILD  README.txt  WORKSPACE  Wow.hs
examples/primitive/: .gitignore  BUILD.bazel  cabal.project  changelog.md  primitive.cabal
examples/rts/: BUILD.bazel
examples/transformers/: BUILD.bazel
examples/tutorial/: README.md  WORKSPACE
examples/vector/: BUILD.bazel  vector.cabal
haskell/: BUILD  BUILD.bazel  CROSSTOOL.windows  actions.bzl  ahc.BUILD.tpl  binutils-repo.bzl  binutils-toolchain.bzl  binutils.BUILD  binutils.bzl  build_settings.bzl  c2hs.bzl  c_compile.bzl  cabal.bzl  cabal_wrapper.bzl  cc.bzl  cc_toolchain_config.bzl  copy-dep-haddock.sh  cpphs.bzl  defs.bzl  doctest.bzl  gen_ghc_bindist.py  ghc-defs-cleanup.sh  ghc-lint-wrapper.sh  ghc-version-check.sh  ghc.BUILD  ghc.BUILD.tpl  ghc.bzl  ghc_bindist.bzl  ghc_bindist_hadrian.bzl  ghci-repl-wrapper.sh  ghci-repl.bzl  ghci-script  group.bzl  haddock-wrapper.sh  haddock.bzl  haskell-impl.bzl  haskell.bzl  hie-bios.sh  hie_bios_wrapper.sh  hlint.bzl  (+23 more)
haskell/assets/: README.md  cpp_defines  gen-patch-win.py  ghc_8_6_2_win_base.patch  ghc_8_6_4_win_base.patch  ghc_8_6_5_win_base.patch  ghc_8_8_1_win_base.patch  ghc_8_8_2_win_base.patch  ghc_8_8_3_win_base.patch  ghc_8_8_4_win_base.patch  ghc_9_0_1_win.patch  ghc_9_0_2_win.patch  ghc_9_2_1_mac.patch  ghc_9_2_1_win.patch  ghc_9_2_2_win.patch  ghc_9_2_3_win.patch  ghc_9_2_4_win.patch  ghc_9_2_5_win.patch  ghc_9_4_3_win.patch  ghc_9_4_5_win.patch  ghc_9_4_6_win.patch  ghc_9_6_1_win.patch  ghc_9_6_2_win.patch  ghci_script  relpath.sh  rules_nixpkgs-get_cpu_value.patch
haskell/asterius/: BUILD.bazel  asterius.bzl  asterius_config.bzl  asterius_dependencies.bzl  asterius_repositories.bzl  asterius_webpack_config.js.tpl  asterius_workspace_rules.bzl  defs.bzl  extension.bzl  install_node_maybe_nix.bzl.tpl  package.json  repositories.bzl
haskell/bazel_testing/: def.bzl
haskell/cabal/: BUILD.bazel
haskell/experimental/: BUILD.bazel  defs.bzl  providers.bzl  transitions.bzl
haskell/nix/: default.nix
haskell/private/: actions.bzl  bazel_platforms.bzl  c2hs_wrapper.sh  cabal_wrapper.py  cabal_wrapper.py.tpl  cabal_wrapper.sh.tpl  cc_libraries.bzl  cc_wrapper.bzl  cc_wrapper.py.tpl  cc_wrapper.sh.tpl  context.bzl  (+54 more)
multiple_version_repro/: BUILD.bazel  Foo.hs  README  WORKSPACE  default.nix  nixpkgs.nix
rule_info/: BUILD.bazel  rule_info.proto
rules_haskell_nix/: .bazelrc  .bazelrc.bzlmod  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  declare_toolchains.bzl  nix_test.sh  nixpkgs.bzl  non_module_deps.bzl
rules_haskell_tests/: .bazelrc  .bazelrc.bzlmod  .bazelrc.common  .ghcide  BUILD.bazel  MODULE.bazel  WORKSPACE  ghcide-snapshot.json  ghcide-snapshot_9.10.3.json  ghcide-snapshot_9.2.5.json  ghcide-snapshot_9.4.5.json  ghcide-snapshot_9.4.6.json  ghcide-snapshot_9.4.8.json  ghcide-snapshot_9.6.2.json  ghcide-snapshot_9.6.4.json  ghcide-snapshot_9.6.5.json  ghcide-snapshot_9.8.2.json  ghcide-stack-snapshot.yaml  ghcide-stack-snapshot_9.10.3.yaml  ghcide-stack-snapshot_9.2.5.yaml  ghcide-stack-snapshot_9.2.8.yaml  ghcide-stack-snapshot_9.4.5.yaml  ghcide-stack-snapshot_9.4.6.yaml  ghcide-stack-snapshot_9.4.8.yaml  ghcide-stack-snapshot_9.6.2.yaml  ghcide-stack-snapshot_9.6.4.yaml  ghcide-stack-snapshot_9.6.5.yaml  ghcide-stack-snapshot_9.8.1.yaml  ghcide-stack-snapshot_9.8.2.yaml  nixpkgs  non_module_deps.bzl  non_module_deps_1.bzl  non_module_deps_2.bzl  non_module_deps_bzlmod.bzl  rules_nixpkgs_nodejs-bazelignore.patch  shell.nix  stackage-pinning-test.yaml  stackage-pinning-test_9.10.3.yaml  stackage-pinning-test_9.2.8.yaml  stackage-pinning-test_9.4.5.yaml  (+51 more)
tests/: BUILD  BUILD.bazel  BUILD.zlib  Foo.hs  Main.hs  MainIs.hs  RunTests.hs  TogetherTest.hs  analysis_tests.bzl  c-compiles.c  extract_from_ghc_bindist.py  ghc.nix  hello.hs  inline_tests.bzl  integration_testing.go  integration_tests.bzl  pre-commit  protoc.bzl  protoc_gen_haskell.nix  rule_test_exe.bzl  run-start-script.sh  sh_inline_test.bzl
tools/: BUILD.bazel  HPCLcov.hs  README.md  bazel  bazel.rc  common.sh  get_cpu_value.bzl  ghc.bzl  hpc2lcov-wrapper  mangling.bzl  os_info.bzl  repositories.bzl
tutorial/: .bazelrc  .bazelrc.bzlmod  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
vector/: BUILD  BUILD.bazel
(+1376 files in other folders)
