load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

exports_files(["start"])

exports_files(
    [
        ".netlify/build.sh",
        ".netlify/install.sh",
        "serve-docs.sh",
    ],
    visibility = ["//tests/shellcheck:__pkg__"],
)

buildifier_exclude_patterns = [
    "./vendor/**",
]

filegroup(
    name = "distribution",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "WORKSPACE",
        "constants.bzl",
        "//debug/linking_utils:all_files",
        "//docs:all_files",
        "//haskell:all_files",
        "//nixpkgs:all_files",
        "//protobuf:all_files",
        "//rule_info:all_files",
        "//tools:all_files",
        "//vendor/bazel_json/lib:all_files",
    ],
    visibility = ["//visibility:public"],
)

# Run this to check for errors in BUILD files.
buildifier(
    name = "buildifier",
    exclude_patterns = buildifier_exclude_patterns,
    mode = "check",
)

# Run this to fix the errors in BUILD files.
buildifier(
    name = "buildifier-fix",
    exclude_patterns = buildifier_exclude_patterns,
    mode = "fix",
    verbose = True,
)
