load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")
load("@os_info//:os_info.bzl", "is_nixos")

buildifier_exclude_patterns = [
    "./vendor/**",
]

# Buildifier does not work yet with bzlmod+nixos
# See https://github.com/bazelbuild/bazel-gazelle/issues/1469
manual_on_nixos = ["manual"] if is_nixos else []

print("manual1", manual_on_nixos)

# Run this to check for errors in BUILD files.
buildifier(
    name = "buildifier",
    exclude_patterns = buildifier_exclude_patterns,
    mode = "check",
    tags = manual_on_nixos,
)

print("manual2", manual_on_nixos)

# Run this to fix the errors in BUILD files.
buildifier(
    name = "buildifier-fix",
    exclude_patterns = buildifier_exclude_patterns,
    mode = "fix",
    tags = manual_on_nixos,
    verbose = True,
)

print("manual3", manual_on_nixos)

buildifier_test(
    name = "buildifier_test",
    srcs = [
        "//:BUILD.bazel",
        "//:WORKSPACE",
        "//:constants.bzl",
        "//:non_module_dev_deps.bzl",
        "//:non_module_dev_deps_2.bzl",
        "//buildifier:all_files",
        "//debug/linking_utils:all_files",
        "//docs:all_files",
        "//haskell:all_files",
        "//nixpkgs:all_files",
        "//rule_info:all_files",
        "//tests:all_files",
        "//tools:all_files",
        "@examples-arm//:all_files",
        "@examples//:all_files",
        "@tutorial//:all_files",
    ],
    mode = "diff",
    tags = [
        "dont_test_on_windows",
    ] + manual_on_nixos,
)

print("manual4", manual_on_nixos)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
