load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")

buildifier_exclude_patterns = [
    "./vendor/**",
]

# Run this to check for errors in BUILD files.
buildifier(
    name = "buildifier",
    exclude_patterns = buildifier_exclude_patterns,
    mode = "check",
)

# Run this to fix the errors in BUILD files.
buildifier(
    name = "buildifier-fix",
    exclude_patterns = buildifier_exclude_patterns,
    mode = "fix",
    verbose = True,
)

buildifier_test(
    name = "buildifier_test",
    srcs = [
        "//:BUILD.bazel",
        "//:WORKSPACE",
        "//:constants.bzl",
        "//:non_module_dev_deps.bzl",
        "//:non_module_dev_deps_2.bzl",
        "//buildifier:all_files",
        "//debug/linking_utils:all_files",
        "//docs:all_files",
        "//haskell:all_files",
        "//nixpkgs:all_files",
        "//rule_info:all_files",
        "//tests:all_files",
        "//tools:all_files",
        "@examples-arm//:all_files",
        "@examples//:all_files",
        "@tutorial//:all_files",
    ],
    mode = "diff",
    tags = [
        "dont_test_on_windows",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
