load("@rules_python//python:defs.bzl", "py_runtime_pair")

py_runtime(
        name = "my_py3_runtime",
        interpreter_path = "~/.pyenv/shims/python3",
        python_version = "PY3",
)

py_runtime_pair(
        name = "my_py_runtime_pair",
        py3_runtime = ":my_py3_runtime",
)

toolchain(
        name = "my_toolchain",
        toolchain = ":my_py_runtime_pair",
        toolchain_type = "@rules_python//python:toolchain_type",
)
